Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,7 +5,14 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+
+   <!-- The form should have fields for: Team name ('name') Coach ('coach') Point Guard ('pg')
+   Shooting Guard ('sg') Power Forward ('pf') Small Forward ('sf') Center ('c') -->
+
+
+   <form class="" action="index.html" method="post">
+
+   </form>
+
  </body>
 </html>
-
-
