--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -11,6 +11,7 @@
 
 
    <form class="" action="index.html" method="post">
+     Team name: <input type="text" name="name" value="">
 
    </form>
 
