Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -11,7 +11,7 @@
 
 
    <form class="" action="index.html" method="post">
-     Team name: <input type="text" name="name" value="">
+     <p>Team name: <input type="text" name="name" value=""></p>
 
    </form>
 
