Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -11,7 +11,9 @@
 
 
    <form class="" action="index.html" method="post">
-     <p>Team name: <input type="text" name="name" value=""></p>
+     <p>Team name: <input type="text" name="name"</p>
+
+     <input type="submit">
 
    </form>
 
