Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -10,7 +10,7 @@
    Shooting Guard ('sg') Power Forward ('pf') Small Forward ('sf') Center ('c') -->
 
 
-   <form class="" action="index.html" method="post">
+   <form class="POST" action="index.html" method="post">
      <p>Team name: <input type="text" name="name"</p>
 
      <input type="submit">
