Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -13,6 +13,7 @@
    <form class="POST" action="index.html" method="post">
      <p>Team name: <input type="text" name="name"</p>
      <p>Coach: <input type="text" name="coach"</p>
+     <p>Point Guard: <input type="text" name="pg"</p>
 
      <input type="submit">
 
