Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -10,7 +10,7 @@
    Shooting Guard ('sg') Power Forward ('pf') Small Forward ('sf') Center ('c') -->
 
 
-   <form class="POST" action="index.html" method="post">
+   <form class="POST" action="index.html" method="/team">
      <p>Team name: <input type="text" name="name"></p>
      <p>Coach: <input type="text" name="coach"></p>
      <p>Point Guard: <input type="text" name="pg"></p>
