Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -8,7 +8,7 @@
 
    <!-- The form should have fields for: Team name ('name') Coach ('coach') Point Guard ('pg')
    Shooting Guard ('sg') Power Forward ('pf') Small Forward ('sf') Center ('c') -->
-
+   <h1>Create a Basketball Team!</h1>
 
    <form class="POST" action="/team">
      <p>Team name: <input type="text" name="name"></p>
