--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -8,7 +8,7 @@
 
    <h1>Create a Basketball Team!</h1>
 
-   <form class="POST" action="/team">
+   <form method="POST" action="/team">
      <p>Team name: <input type="text" name="name"></p>
      <p>Coach: <input type="text" name="coach"></p>
      <p>Point Guard: <input type="text" name="pg"></p>
