Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -8,6 +8,9 @@
 
    <h1>Create a Basketball Team!</h1>
 
+
+</form>
+
    <form method="POST" action="/team">
      <p>Team name: <input type="text" name="name"></p>
      <p>Coach: <input type="text" name="coach"></p>
